[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Nest.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 10.6425

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.309804, 0.196078, 0.101961, 1 )
corner_radius_top_left = 23
corner_radius_top_right = 23
corner_radius_bottom_right = 23
corner_radius_bottom_left = 23

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.415686, 0.25098, 0.105882, 1 )
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.505882, 0.309804, 0.137255, 1 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.172549, 0.164706, 0.160784, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="Nest" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 12.7279
margin_top = -12.9792
margin_right = 32.7279
margin_bottom = 7.02082
rect_rotation = 45.0
color = Color( 0, 0, 0, 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 22, 0 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -0.206779, -4.82872, 4.74297, -1.64673, 4.74297, 2.86108, 0.146774, 5.77789, -2.41649, 5.68951, -2.41649, -5.44743 )

[node name="FoodLabel" type="Label" parent="."]
margin_left = -13.125
margin_top = 24.375
margin_right = 12.875
margin_bottom = 44.375
text = "0"
align = 1
valign = 1

[node name="Layers" type="Node2D" parent="."]

[node name="layer4" type="Label" parent="Layers"]
margin_left = -23.3125
margin_top = -21.375
margin_right = 22.6875
margin_bottom = 24.625
custom_styles/normal = SubResource( 2 )

[node name="layer3" type="Label" parent="Layers"]
margin_left = -19.0625
margin_top = -16.6875
margin_right = 17.9375
margin_bottom = 20.3125
custom_styles/normal = SubResource( 3 )

[node name="layer2" type="Label" parent="Layers"]
margin_left = -14.75
margin_top = -13.375
margin_right = 14.25
margin_bottom = 15.625
custom_styles/normal = SubResource( 4 )

[node name="layer1" type="Label" parent="Layers"]
margin_left = -8.21339
margin_top = -6.09911
margin_right = 6.78661
margin_bottom = 8.90089
custom_styles/normal = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_Nest_body_entered"]
